--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Team Astro - Card Games</title>
+    <title>Team Rocket - Card Games</title>
   </head>
   <body>
     <div id="root"></div>
